[project]
name = "flockwave-mavlink"
version = "0.4.0"
description = "MAVLink protocol support for Skybrush"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = ["crcmod-plus >= 2.1.0"]

[tool.poetry]
packages = [{ include = "flockwave", from = "src" }]
include = ["src/flockwave/protocols/mavlink/dialects/**/*"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = { extras = ["toml"], version = "^7.9.1" }
pytest-cov = "^6.2.1"
rich = "^14.0.0"
ruff = ">=0.12.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.scripts]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
