[project]
name = "flockwave-mavlink"
version = "0.5.0"
description = "MAVLink protocol support for Skybrush"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = ["fastcrc>=0.3.2"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "coverage[toml]>=7.9.1",
  "pytest-cov>=6.2.1",
  "rich>=14.0.0",
  "ruff>=0.12.0",
]

[tool.poe.tasks]
bootstrap = [
  { cmd = "uv sync" },
  { cmd = "python tools/generate-from-pymavlink.py --format" },
]
benchmark = { cmd = "python tools/benchmarks/parser.py data/packets.pkl" }

[tool.poetry]
include = [
  { path = "src/flockwave/protocols/mavlink/dialects/**/*", format = [
    "sdist",
    "wheel",
  ] },
]

[tool.uv.build-backend]
module-name = "flockwave"
namespace = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"
